--- a/views/register.html
+++ b/views/register.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h1>Register</h1>
         <form action="/register" method="POST">
-            <label for="username">Username:</label>
-            <input type="username" id="username" name="username" placeholder="Enter your username" required>
+            <label for="username">Email:</label>
+            <input type="email" id="username" name="username" placeholder="Enter your email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" placeholder="Create a password" required>
             <label for="birthdate">Birthdate:</label>
