--- a/views/register.html
+++ b/views/register.html
@@ -21,7 +21,7 @@
             <label for="role">Role:</label>
             <select id="role" name="role">
                 <option value="reserver">Reserver</option>
-                <option value="administrator">Administrator</option>
+                <option value="admin">Administrator</option>
             </select>
             <button type="submit">Register</button>
         </form>
